side nav spacing fixed

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -23,7 +23,7 @@ body{
 }
 .side-bar-cont{
     height: 100%;
-    width: 10%;
+    width: 12%;
     background-color: rgb(37,47,54);;
 }
 .main-side-navbar{
